--- a/05-MY451_5.rmd
+++ b/05-MY451_5.rmd
@@ -344,7 +344,7 @@ two-sided than when it is one-sided. Such conservatism is typically
 regarded as a desirable feature in statistical inference (this will be
 discussed further in Section \@ref(ss-means-tests3-errors)).
 
-\label{p_onesidednull} The two-sided alternative hypothesis
+ The two-sided alternative hypothesis
 (\@ref(Hatwo)) is clearly the logical opposite of the null hypothesis
 (\@ref(H0p2)): if $\Delta$ is not equal to 0, it must be “not equal” to
 0. So a two-sided alternative hypothesis must correspond to a “point”
@@ -450,7 +450,7 @@ approach will be used in the computer classes.
 
 ### The sampling distribution of the test statistic and $P$-values {#ss-probs-test1sample-samplingd}
 
-\label{p_thumbp} Like the $\chi^{2}$ test of Chapter \@ref(c-tables), the
+Like the $\chi^{2}$ test of Chapter \@ref(c-tables), the
 $z$-test for a population proportion requires some conditions on the
 sample size in order for the approximate sampling distribution of the
 test statistic to be appropriate. These depend also on the value of
@@ -534,7 +534,7 @@ figures runs from $-4$ to $+4$, so $-16.71$ is clearly far in the tail
 of the distribution and the corresponding probability is very small; we
 would report it as $P<0.001$.
 
-\label{p_onesided} Consider now the case of a one-sided alternative
+ Consider now the case of a one-sided alternative
 hypothesis. For example, in the referendum example we might have decided
 beforehand to focus only on the possiblity that the proportion of people
 who intend to vote Yes is smaller than 0.5, and hence consider the
@@ -998,7 +998,7 @@ corresponding single confidence interval. Nevertheless, the connection
 stated above is useful for understanding the ideas of both tests and
 confidence intervals.
 
-\label{p_civstest} These results also illustrate how confidence
+ These results also illustrate how confidence
 intervals are inherently more informative than significance tests. For
 instance, in the jury example 5.2, both the test and the confidence
 interval agree on the implausibility of the claim that the population
